Changes to Version 2.0-0

  o Many changes to style of dialogs: tabs, Reset button, Apply button, small interface improvements.

  o Support for R Markdown, with script and Rmd tabs.

  o Expanded Options dialog and new Save Options dialog.

  o Improved probability plots. 

  o Introduced plotDistr(), lineplot(), indexplot() convenience functions.

  o Use automatic point identification as default in plot dialogs.

  o Calls to deprecated functions .find.package() and .path.package() replaced by find.package() and path.package() (suggestion of Brian Ripley).

  o Partial correlations now optionally report pairwise p-values (suggestion of Aaron Swink).

  o Removed Sciviews support code.

  o Small fixes.

Changes to Version 1.9-5

  o R logo now replaces Tk logo on non-Windows as well as Windows platforms (with help of Milan Bouchet-Valet).

  o Faster opening of dialog windows under Windows (consequence of above).

  o Fix for Mac OS X bug in auto-load of missing dependencies on initial start-up (reported by Pablo Serrano).

Changes to Version 1.9-4

  o Introduced RcmdrEnv.on.path option for plug-in packages that don't conform to the new rules.

  o Bug fixes to some dialogs that didn't work properly when RcmdrEnv not on path (reported by Kristian Hovde Liland).

Changes to Version 1.9-3

  o Fixed one- and multi-way ANOVA so that observation statistics can be saved (bug reported by Pedro Alberto Barbetta).

  o New quit.R.on.close Rcmdr option (suggested by Milan Bouchet-Valat).

  o Fix to Rcmdr display font to improve appearance on some Macs (suggested by Milan Bouchet-Valat).

  o Modified start-up so that Commander window doesn't open twice when a plug-in is loaded via library() (adapting a suggestion by Milan Bouchet-Valat).

  o Various low-level changes for compatability with R devel (R 2.16.0).

  o Updated French translation (courtesy of Milan Bouchet-Valat).
