@@ -1,6 +1,6 @@
 # R Commander Menu Definitions
 
-# last modified 2013-06-02 by J. Fox
+# last modified 2013-06-07 by J. Fox
 
 #   type    menu/item      operation/parent  label                                          command/menu                activation  install?
 
@@ -148,6 +148,7 @@
     item    graphsMenu      separator       ""                                              ""                          ""          ""
     item    graphsMenu      command         "Index plot..."                                 indexPlot                   "numericP()"          ""
     item    graphsMenu      command         "Histogram..."                                  Histogram                   "numericP()"          ""
+    item    graphsMenu      command         "Density estimate..."                           DensityPlot         "numericP()"          ""
     item    graphsMenu      command         "Stem-and-leaf display..."                      stemAndLeaf                 "numericP()"  "packageAvailable('aplpack')"
     item    graphsMenu      command         "Boxplot..."                                    boxPlot                     "numericP()" 		  ""
     item    graphsMenu      command         "Quantile-comparison plot..."                   QQPlot                      "numericP()" "packageAvailable('car')"
