@@ -10,6 +10,8 @@ Changes to Version 2.0-0
 
   o Introduced plotDistr(), lineplot(), indexplot() convenience functions.
 
+  o New nonparametric density estimate dialog.
+
   o Use automatic point identification as default in plot dialogs.
 
   o Calls to deprecated functions .find.package() and .path.package() replaced by find.package() and path.package() (suggestion of Brian Ripley).
